tm_windows/assets/x.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package command-line-arguments */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 5 "main.go"

#include <stdlib.h>
typedef void (*self_stop_callback_t)(char*);
static inline void do_self_stop_callback(self_stop_callback_t cb, char* s) {
	cb(s);
}
typedef void (*status_change_callback_t)(int);
static void do_status_change_callback(status_change_callback_t cb, int status) {
	cb(status);
}

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern __declspec(dllexport) char* Start(void* p, int len, self_stop_callback_t callback);
extern __declspec(dllexport) char* Stop(void);
extern __declspec(dllexport) void FreeString(char* s);
extern __declspec(dllexport) void FreeBytes(void* p);
extern __declspec(dllexport) char* StartApiServer(void* p, int len);

/* Return type for GenerateTls */
struct GenerateTls_return {
	void* r0;
	int r1;
	char* r2;
};
extern __declspec(dllexport) struct GenerateTls_return GenerateTls(void);
extern __declspec(dllexport) char* InstallService(char* path, char* name);
extern __declspec(dllexport) char* RemoveService(char* name);
extern __declspec(dllexport) char* StartService(char* path, char* name);
extern __declspec(dllexport) char* GetServiceStatus(char* name);
extern __declspec(dllexport) char* StopService(char* name);

#ifdef __cplusplus
}
#endif