tm_windows/lib/tm_windows_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/tm_windows.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class TmWindowsBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  TmWindowsBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  TmWindowsBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int _GoStringLen(
    _GoString_ s,
  ) {
    return __GoStringLen(
      s,
    );
  }

  late final __GoStringLenPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(_GoString_)>>(
          '_GoStringLen');
  late final __GoStringLen =
      __GoStringLenPtr.asFunction<int Function(_GoString_)>();

  ffi.Pointer<ffi.Char> _GoStringPtr(
    _GoString_ s,
  ) {
    return __GoStringPtr(
      s,
    );
  }

  late final __GoStringPtrPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(_GoString_)>>(
          '_GoStringPtr');
  late final __GoStringPtr =
      __GoStringPtrPtr.asFunction<ffi.Pointer<ffi.Char> Function(_GoString_)>();

  void do_status_change_callback(
    status_change_callback_t cb,
    int status,
  ) {
    return _do_status_change_callback(
      cb,
      status,
    );
  }

  late final _do_status_change_callbackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              status_change_callback_t, ffi.Int)>>('do_status_change_callback');
  late final _do_status_change_callback = _do_status_change_callbackPtr
      .asFunction<void Function(status_change_callback_t, int)>();

  ffi.Pointer<ffi.Char> Start(
    ffi.Pointer<ffi.Void> p,
    int len,
    self_stop_callback_t callback,
  ) {
    return _Start(
      p,
      len,
      callback,
    );
  }

  late final _StartPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>, ffi.Int, self_stop_callback_t)>>('Start');
  late final _Start = _StartPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Void>, int, self_stop_callback_t)>();

  ffi.Pointer<ffi.Char> Stop() {
    return _Stop();
  }

  late final _StopPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>('Stop');
  late final _Stop = _StopPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  void FreeString(
    ffi.Pointer<ffi.Char> s,
  ) {
    return _FreeString(
      s,
    );
  }

  late final _FreeStringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'FreeString');
  late final _FreeString =
      _FreeStringPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void FreeBytes(
    ffi.Pointer<ffi.Void> p,
  ) {
    return _FreeBytes(
      p,
    );
  }

  late final _FreeBytesPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'FreeBytes');
  late final _FreeBytes =
      _FreeBytesPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> StartApiServer(
    ffi.Pointer<ffi.Void> p,
    int len,
  ) {
    return _StartApiServer(
      p,
      len,
    );
  }

  late final _StartApiServerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>, ffi.Int)>>('StartApiServer');
  late final _StartApiServer = _StartApiServerPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>, int)>();

  GenerateTls_return GenerateTls() {
    return _GenerateTls();
  }

  late final _GenerateTlsPtr =
      _lookup<ffi.NativeFunction<GenerateTls_return Function()>>('GenerateTls');
  late final _GenerateTls =
      _GenerateTlsPtr.asFunction<GenerateTls_return Function()>();

  ffi.Pointer<ffi.Char> InstallService(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _InstallService(
      path,
      name,
    );
  }

  late final _InstallServicePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('InstallService');
  late final _InstallService = _InstallServicePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> RemoveService(
    ffi.Pointer<ffi.Char> name,
  ) {
    return _RemoveService(
      name,
    );
  }

  late final _RemoveServicePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>)>>('RemoveService');
  late final _RemoveService = _RemoveServicePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> StartService(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _StartService(
      path,
      name,
    );
  }

  late final _StartServicePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('StartService');
  late final _StartService = _StartServicePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> GetServiceStatus(
    ffi.Pointer<ffi.Char> name,
  ) {
    return _GetServiceStatus(
      name,
    );
  }

  late final _GetServiceStatusPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>)>>('GetServiceStatus');
  late final _GetServiceStatus = _GetServiceStatusPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> StopService(
    ffi.Pointer<ffi.Char> name,
  ) {
    return _StopService(
      name,
    );
  }

  late final _StopServicePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>)>>('StopService');
  late final _StopService = _StopServicePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>();
}

final class _GoString_ extends ffi.Struct {
  external ffi.Pointer<ffi.Char> p;

  @ptrdiff_t()
  external int n;
}

typedef ptrdiff_t = ffi.LongLong;
typedef Dartptrdiff_t = int;
typedef status_change_callback_t
    = ffi.Pointer<ffi.NativeFunction<status_change_callback_tFunction>>;
typedef status_change_callback_tFunction = ffi.Void Function(ffi.Int);
typedef Dartstatus_change_callback_tFunction = void Function(int);

final class GoInterface extends ffi.Struct {
  external ffi.Pointer<ffi.Void> t;

  external ffi.Pointer<ffi.Void> v;
}

final class GoSlice extends ffi.Struct {
  external ffi.Pointer<ffi.Void> data;

  @GoInt()
  external int len;

  @GoInt()
  external int cap;
}

typedef GoInt = GoInt64;
typedef GoInt64 = ffi.LongLong;
typedef DartGoInt64 = int;
typedef self_stop_callback_t
    = ffi.Pointer<ffi.NativeFunction<self_stop_callback_tFunction>>;
typedef self_stop_callback_tFunction = ffi.Void Function(ffi.Pointer<ffi.Char>);
typedef Dartself_stop_callback_tFunction = void Function(ffi.Pointer<ffi.Char>);

/// Return type for GenerateTls
final class GenerateTls_return extends ffi.Struct {
  external ffi.Pointer<ffi.Void> r0;

  @ffi.Int()
  external int r1;

  external ffi.Pointer<ffi.Char> r2;
}
